# pytest-clerk-mock

./: README.md  pyproject.toml
.cursor/agents/: code-quality-reviewer.md  performance-reviewer.md  review-orchestrator.md  security-code-reviewer.md  test-coverage-reviewer.md
.cursor/commands/: deslop.md
.cursor/rules/: fastapi.mdc  github.mdc  http.mdc  poetry.mdc  pydantic.mdc  python.mdc  sqlalchemy.mdc  testing.mdc
.github/workflows/: publish-to-pypi.yml  run_tests.yml
src/pytest_clerk_mock/: __init__.py  client.py  helpers.py  plugin.py  utils.py
src/pytest_clerk_mock/interfaces/: __init__.py  organization_requests.py  user_requests.py
src/pytest_clerk_mock/models/: auth.py  commerce.py  organization.py  user.py
src/pytest_clerk_mock/services/: __init__.py  auth.py  organization_memberships.py  organizations.py  users.py
src/pytest_mock_clerk/: __init__.py  client.py  plugin.py
src/pytest_mock_clerk/models/: __init__.py
src/pytest_mock_clerk/services/: __init__.py  auth.py  users.py
tests/: test_auth.py  test_clerk_sdk_contract.py  test_organization_memberships.py  test_organizations.py  test_sdk_compatibility.py  test_users.py
tests/contract_parity/: conftest.py  test_sdk_contracts.py  test_utils.py  utils.py
