[project]
name = "pytest-clerk-mock"
version = "0.0.1"
description = "A pytest plugin for mocking Clerk authentication"
authors = [
    { name = "Julien Kmec", email = "me@julien.dev" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "clerk-backend-api>=1.0.0",
    "pydantic>=2.0.0",
]

[project.entry-points."pytest11"]
mock_clerk = "pytest_clerk_mock.plugin"

[tool.poetry]
packages = [{include = "pytest_clerk_mock", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
