[project]
name = "pytest-clerk-mock"
version = "0.3.0"
description = "A pytest plugin for mocking Clerk authentication"
authors = [
    { name = "Julien Kmec", email = "me@julien.dev" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clerk-backend-api>=5.0.0,<=5.0.1",
    "pydantic>=2.0.0",
]

[project.urls]
Repository = "https://github.com/julien777z/pytest-mock-clerk"

[project.entry-points."pytest11"]
mock_clerk = "pytest_clerk_mock.plugin"

[tool.poetry]
packages = [{include = "pytest_clerk_mock", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
ruff = "^0.15.4"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "contract: contract parity tests",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"